<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/master_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowUpText_SceneCompositionActivity">


    <TextView
        android:id="@+id/animationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="122dp"
        android:text="@string/animation_layout_master"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <FrameLayout
        android:id="@+id/scene_root1"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <include
            layout="@layout/showup_a_scene"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/scene_root2"
        android:layout_width="match_parent"
        android:layout_marginTop="170dp"
        android:layout_height="100dp">

        <include
            layout="@layout/showup_b_scene"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginTop="350dp"
        android:onClick="lastChangeTextActivity"
        android:text="@string/back" />

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="348dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:onClick="nextDynamicImgViewActivity"
        android:text="@string/next" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="57dp"
        android:layout_marginLeft="57dp"
        android:layout_marginTop="278dp"
        android:onClick="firstSceneAction"
        android:text="@string/scene1" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="73dp"
        android:layout_marginRight="73dp"
        android:onClick="secondSceneAction"
        android:text="@string/scene2" />


</RelativeLayout>